auth-service/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  labels:
    name: auth-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: api.testsejutacita.auth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3000
